--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,8 +23,10 @@ Depends:
     R (>= 2.10)
 RoxygenNote: 7.2.3
 Imports: 
+    graphics,
     httr,
     mvnfast,
     readr,
     stringr,
-    terra
+    terra,
+    utils
