fix negloglike optimization

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,6 @@ export(sam_polyM)
 import(stats)
 importFrom(mvnfast,dmvn)
 importFrom(mvnfast,dmvt)
-importFrom(stats,optim)
+importFrom(optimx,optimx)
 importFrom(utils,as.relistable)
 importFrom(utils,relist)
