--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,4 +31,4 @@ Imports:
     stringr,
     terra,
     utils
-URL: https://alrobles.github.io/nicher, https://github.com/alrobles/nicher
+URL: https://alrobles.github.io/nicher, https://github.com/alrobles/nicher, https://alrobles.github.io/nicher/
